--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -24,6 +24,22 @@
   padding-top: 20px; /* Optional: to add some padding from the top of the viewport */
 }
 
+.homepageBackground {
+  background-image: url('/836923.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; /* Align content to the top */
+  padding-top: 80px;
+  padding-bottom: 50px;
+  position: relative;
+}
+
 /* Heading styling */
 .heading {
   text-align: center;
