--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,6 +40,22 @@
   position: relative;
 }
 
+.countriesListBackground {
+  background-image: url('/CountriesListWallpaper.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; /* Align content to the top */
+  padding-top: 80px;
+  padding-bottom: 50px;
+  position: relative;
+}
+
 /* Heading styling */
 .heading {
   text-align: center;
@@ -396,3 +412,4 @@
     gap: 20px; /* Reduce gap for smaller screens */
   }
 }
+
